--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="script.js" type="module"></script>
     <!-- Link to enemy modules -->
     <script src="modules/enemy1.js" type="module"></script>
+    <script src="modules/enemy2.js" type="module"></script>
   </body>
 </html>
