Add Enemy3 module, update script to use it
* Added a new module for Enemy3 (enemy3.js), implementing enemy type Ghost with customized movement and animation.
* Updated the HTML file to include the script for Enemy3.
* Modified script.js to import and use the Enemy3 module instead of Enemy2 for rendering and animating enemies.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <!-- Link to enemy modules -->
     <script src="modules/enemy1.js" type="module"></script>
     <script src="modules/enemy2.js" type="module"></script>
+    <script src="modules/enemy3.js" type="module"></script>
   </body>
 </html>
