Add Enemy4 module, update script to use it
* Added a new module for Enemy4 (enemy4.js), implementing enemy type Razor with customized movement and animation.
* Updated the HTML file to include the script for Enemy4.
* Modified script.js to import and use the Enemy4 module instead of Enemy3 for rendering and animating enemies.

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <script src="modules/enemy1.js" type="module"></script>
     <script src="modules/enemy2.js" type="module"></script>
     <script src="modules/enemy3.js" type="module"></script>
+    <script src="modules/enemy4.js" type="module"></script>
   </body>
 </html>
